observability/k8s-manifests/deployment-svc-a.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-a-deployment
    # run: service-a-deployment
  name: service-a-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a-deployment
  template:
    metadata:
      labels:
        app: service-a-deployment
    spec:
      containers:
      - image: 3788/service-a:latest
        name: service-a
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
