observability/k8s-manifests/deployment-svc-b.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: service-b-deployment
    # run: service-b-deployment
  name: service-b-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b-deployment
  template:
    metadata:
      labels:
        app: service-b-deployment
    spec:
      containers:
      - image: 3788/service-b:latest
        name: service-b
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
