observability/k8s-manifests/service-svc-a.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    job: node-api
    app: a-service
  name: a-service
spec:
  ports:
  - name: a-service-port
    port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: service-a-deployment
  type: ClusterIP
